# chatbot-telegram

./: DOCUMENTATION.md  docker-compose.yml  main.py  pyproject.toml
src/: verify_container.py  verify_views.py
src/application/dtos/: bot_dtos.py  technical_service_dtos.py
src/application/services/: folio_validator.py
src/application/use_cases/: get_service_by_folio.py  handler_conversation.py
src/controllers/: bot_controller.py
src/domain/: constants.py
src/domain/entities/: technical_service.py  user_session.py
src/domain/ports/: technical_service_port.py  user_session_port.py
src/infrastructure/: container.py
src/infrastructure/adapters/: redis_session_adapter.py  technical_service_adapter.py
src/infrastructure/database/: configuration.py  models.py  state_manager.py
src/infrastructure/database/utils/: init_db.py  test.py
src/infrastructure/presentation/bot/controllers/: telegram_bot_controller.py
src/infrastructure/presentation/bot/handlers/: telegram_handlers.py
src/infrastructure/presentation/bot/views/: bot_views.py
src/infrastructure/redis/: redis_client.py  redis_configuration.py
src/models/: constants.py  folio_service.py
src/models/dtos/: service_dtos.py
src/presentation/bot/: views.py
src/utils/: delete_pycache.py  main_test.py
src/view/: bot_view.py
