[project]
name = "chatbot-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.5",
    "sqlalchemy>=2.0.45",
]
